# expenses-app

./: .gitignore  LICENSE  README.md  db.erd  pyproject.toml
alembic/: env.py
alembic/versions/: 0c68147ea42a_change_expense_name_expense_.py  2ed25376bb28_fix_updated_at_timestamp_arg.py  30fa667062d3_change_expense_name_expense_.py  3f112952521a_change_expense_expense_name_.py  43ba28d5b28d_added_custom_categories_and_expense_.py  48978d1b7149_add_timezone_awareness_to_expense_model.py  56e33a22390f_fix_value_mapping_for_is_deleted.py  645abe72bd83_fix_updated_at_timestamp_arg_final.py  6a83b7380417_add_name_property_in_expense_category.py  713e8e62b04b_add_is_deleted_col_to_user.py  80bc3c898ef2_add_user_id_to_expensename_and_update_.py  b5dc15f43cef_fix_timestamp_callable_arg.py  b801f95ce4af_remove_unique_constraint_on_name_in_.py  cd30e8da2f27_add_timezone_attr_to_user_model.py  cd9e4d107aef_fix_timestamp_callable_arg.py  cf69ee26bd35_initial_migration.py  d821d762b5ff_add_is_deleted_attr_to_expense_model.py  dfdff4e5dcd5_add_google_id_field_in_user_table.py  e4185ef20228_fix_relationships_and_add_is_deleted_.py  e63309ae3a59_add_notes_attr_to_expense_model.py  e715d4164ef3_fix_relationships_in_category_expense_.py
db/: backup_db.py  clear_db.py  restore_db_backup.py
src/: .env_template  run_server.py
src/app/: main.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/routes/: analysis_route.py  auth.py  auth_route.py  category_route.py  (+4 more)
src/app/core/: config.py
src/app/schemas/: category.py  expense.py  user.py
src/app/schemas/common/: common.py  enum.py  messages.py
src/app/schemas/exceptions/: application_error.py
src/app/services/: auth.py  auth_service.py  category_service.py  data_analysis_service.py  expense_service.py  google_auth.py  google_auth_service.py  user_service.py
src/app/services/utils/: process_request.py  processors.py  utils.py  validators.py
src/app/sql_app/: __init__.py  database.py
src/app/sql_app/category/: category.py
src/app/sql_app/custom_category/: custom_category.py
src/app/sql_app/expense/: expense.py
src/app/sql_app/expense_category/: expense_category.py
src/app/sql_app/expense_name/: expense_name.py
src/app/sql_app/user/: user.py
