[project]
name = "expenses-app"
version = "0.1.0"
description = "An API designed to track your expenses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "mypy>=1.14.0",
    "python-dotenv>=1.0.1",
    "pydantic[email,mypy]>=2.10.4",
    "asyncpg>=0.30.0",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.1",
    "python-multipart>=0.0.20",
    "types-python-jose>=3.3.4.20240106",
    "types-passlib>=1.7.7.20241221",
    "alembic>=1.14.0",
    "python-dateutil>=2.9.0.post0",
    "types-python-dateutil>=2.9.0.20241206",
    "types-pyyaml>=6.0.12.20241230",
    "types-psycopg2>=2.9.21.20241019",
    "types-pywin32>=308.0.0.20241221",
    "types-ujson>=5.10.0.20240515",
    "geopy>=2.4.1",
    "timezonefinder>=6.5.7",
    "pytz>=2024.2",
    "pandas>=2.2.3",
    "ruff>=0.9.9",
    "psycopg2-binary>=2.9.10",
    "httpx>=0.28.1",
]
